--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 </head>
 <body>
     <h1>Alkane Git Page</h1>
+    <div class="loader loader-img">
+        <div class="loader-content">
+            <!-- Loader Content Source Code-->
+        </div>
+    </div>
 </body>
 </html>
